--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@prisma/client": "^3.14.0",
     "crypto-random-string": "^5.0.0",
     "cuid": "^2.1.8",
