--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
     "crypto-random-string": "^5.0.0",
     "cuid": "^2.1.8",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "next-auth": "^4.6.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "swr": "^1.3.0",
